--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,7 +46,10 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\6000.0.38f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.UIToolkit.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\aim.cs" />
+    <Compile Include="Assets\Scripts\Aim.cs" />
+    <Compile Include="Assets\ExplosionEffect.cs" />
+    <Compile Include="Assets\Scripts\FallingObjectsSpawner.cs" />
+    <Compile Include="Assets\BackgroundMusic.cs" />
     <Reference Include="UnityEngine">
       <HintPath>C:\Program Files\Unity\Hub\Editor\6000.0.38f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
