--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -48,8 +48,10 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Aim.cs" />
     <Compile Include="Assets\ExplosionEffect.cs" />
+    <Compile Include="Assets\Score.cs" />
     <Compile Include="Assets\Scripts\FallingObjectsSpawner.cs" />
     <Compile Include="Assets\BackgroundMusic.cs" />
+    <Compile Include="Assets\WinMessage.cs" />
     <Reference Include="UnityEngine">
       <HintPath>C:\Program Files\Unity\Hub\Editor\6000.0.38f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
